# SchedulerApp

./: .gitignore  CMakeLists.txt  GUIDesign.xml  README.md  fastMake.sh  学习心得.docx  设计文档.html  设计文档.md
output/Debug/: GUIDesign.xml  SchedulerApp
output/Release/: SchedulerApp
src/: GUIDesign.xml  SchedulerApp.cpp  SchedulerApp.h  Task.h  TaskManager.cpp  TaskManager.h  UserManager.cpp  UserManager.h  embedded_resources.cpp  embedded_resources.h  generate_resources.cpp  main.cpp  md5.cpp  md5.h
